# cicd-maturity

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: quality-monitor.md
.github/workflows/: ci.yml
app/: __init__.py
app/models/: __init__.py  pipeline.py
app/routes/: assessments.py  main.py  pipelines.py
app/services/: __init__.py  assessment_service.py  git_analyzer.py  pipeline_service.py  recommendation_service.py
app/static/css/: style.css
app/static/js/: app.js  charts.js
app/templates/: base.html  index.html  reference.html
app/templates/assessments/: history.html  new.html  pdf.html  view.html
app/templates/pipelines/: list.html  new.html  view.html
config/: assessment_questions.py  settings.py
migrations/versions/: 52ee734cb16c_add_ai_readiness_score.py  70f5c99c7a1b_add_dimensions_and_responses.py  765552021352_add_application_type_classification.py  de0eb4d01872_add_file_path_to_dimension_responses.py
tests/: conftest.py  test_assessment_service.py  test_assessments.py  test_git_analyzer.py  test_pipeline_service.py  test_recommendation_service.py  test_repo_file_url.py
tests/features/: dashboard.feature  pipelines.feature
tests/step_defs/: conftest.py  test_dashboard.py  test_pipelines.py
