[project]
name = "pipeline-maturity"
version = "0.1.0"
description = "Software development pipeline maturity assessment and visualisation"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
bdd_features_base_dir = "tests/features/"

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
